# cvar-masters

./: .gitignore  README.md  pyproject.toml
notebooks/: 001-kk-phyrisks-data-copy-s3-bucket.ipynb  001-kk-phyrisks-usage.ipynb  002-kk-phyrisks-data-copy-s3-bucket.ipynb  002-kk-phyrisks-usage.ipynb  003-kk-si-poplave-merging-2-full.ipynb  003-kk-si-poplave-merging.ipynb  004-kk-si-poplave-rasterization.ipynb  004-kk-wri-model-onboarding.ipynb  005-kk-si-poplave-onboarding.ipynb  006-kk-flood-depth-damage.ipynb  006-kk-vulnerability-depth-damage.ipynb  007.1-kk-ajda-poplave-processing.ipynb  008-kk-calculate-flood-depths-for-2023-poplave.ipynb  008-kk-calculate-flood-depths.ipynb  009-kk-compare-flood-depths-model-results.ipynb  009-kk-compare-model-results.ipynb  010-kk-compare-damage-functions.ipynb  100-kk-plots-for-thesis.ipynb  _008-kk-calculate-flood-depths-for-2023-poplave.ipynb
notebooks/utils/: colors.py  display_metrics_table.py  flood_request_utils.py  quality_metrics.py
papers/informatica_flood_risk_2025-05/: 2025_informatica_paper_flood_risk.aux  2025_informatica_paper_flood_risk.blg  2025_informatica_paper_flood_risk.tex  Informat.sty
papers/thesis_latex_2025-07/: ips-msc-thesis-eng-ieee.aux  ips-msc-thesis-eng-ieee.bbl  ips-msc-thesis-eng-ieee.bcf  ips-msc-thesis-eng-ieee.blg  ips-msc-thesis-eng-ieee.idx  ips-msc-thesis-eng-ieee.ilg  ips-msc-thesis-eng-ieee.ind  ips-msc-thesis-eng-ieee.loa  ips-msc-thesis-eng-ieee.lof  ips-msc-thesis-eng-ieee.lot  ips-msc-thesis-eng-ieee.out  ips-msc-thesis-eng-ieee.run.xml  ips-msc-thesis-eng-ieee.tex  ipsthesis.cls  (+6 more)
(+22 files in other folders)
