[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvar"
version = "0.1.0"
authors = [
    { name = "Klemen Kubelj" },
]
description = "CVaR Masters Thesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hazard",
]

[tool.setuptools.packages.find]
where = ["src"] 